fix bodytext margin, styled navbar on mobile

--- a/css.css
+++ b/css.css
@@ -174,7 +174,10 @@ p{ /*body text*/
 
   .bodyImg{
     width: 75%; /*box will fill up % of site width*/
-    margin: 1.5% 0% 3% 10%;
+    margin: 0% 0% 3% 10%;
+  }
+  .bodyText{
+    margin: 0% 0% 4% 10%;
   }
 }
 
